spacing issues

--- a/css/style.scss
+++ b/css/style.scss
@@ -103,6 +103,7 @@ body {
 
 .navbar {
     z-index: 1000;
+    position: absolute;
 }
 
 .nav-link {
